--- a/package.json
+++ b/package.json
@@ -2,11 +2,19 @@
   "name": "intake-engine",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "packages/*",
+    "apps/*"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lionsden:dev": "npx env-cmd -f .env npm run dev -w intake-lionsden",
+    "elliot-wise:dev": "npx env-cmd -f .env npm run dev -w intake-elliot-wise",
+    "lionstone:dev": "npx env-cmd -f .env npm run dev -w intake-lionstone",
+    "peace-for-nature:dev": "npx env-cmd -f .env npm run dev -w intake-peace-for-nature"
   },
   "dependencies": {
     "next": "^14.2.0",
@@ -14,6 +22,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "env-cmd": "^10.1.0",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
