--- a/package.json
+++ b/package.json
@@ -11,26 +11,33 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "seed": "tsx scripts/seed-tenants.ts",
     "lionsden:dev": "npx env-cmd -f .env npm run dev -w intake-lionsden",
     "elliot-wise:dev": "npx env-cmd -f .env npm run dev -w intake-elliot-wise",
     "lionstone:dev": "npx env-cmd -f .env npm run dev -w intake-lionstone",
     "peace-for-nature:dev": "npx env-cmd -f .env npm run dev -w intake-peace-for-nature"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@neondatabase/auth": "^0.2.0-beta.1",
+    "@neondatabase/serverless": "^0.10.0",
     "next": "^14.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "env-cmd": "^10.1.0",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.16",
+    "env-cmd": "^10.1.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.2.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
+    "tsx": "^4.7.0",
     "typescript": "^5.3.0"
   }
 }
