--- a/package.json
+++ b/package.json
@@ -2,20 +2,12 @@
   "name": "intake-engine",
   "version": "0.1.0",
   "private": true,
-  "workspaces": [
-    "packages/*",
-    "apps/*"
-  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "seed": "tsx scripts/seed-tenants.ts",
-    "lionsden:dev": "npx env-cmd -f .env npm run dev -w intake-lionsden",
-    "elliot-wise:dev": "npx env-cmd -f .env npm run dev -w intake-elliot-wise",
-    "lionstone:dev": "npx env-cmd -f .env npm run dev -w intake-lionstone",
-    "peace-for-nature:dev": "npx env-cmd -f .env npm run dev -w intake-peace-for-nature"
+    "seed": "tsx scripts/seed-tenants.ts"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
